Fixed block title display on smaller screen

--- a/admin/assets/styles/components/_cortex-block-list-item.scss
+++ b/admin/assets/styles/components/_cortex-block-list-item.scss
@@ -39,6 +39,7 @@
 	border: none;
 	border-bottom: 1px solid #ececec;
 	opacity: 1;
+	overflow: hidden;
 	padding: 6px;
 	padding-left: 6px;
 	padding-right: 12px;
@@ -53,7 +54,7 @@
 }
 
 .cortex-block-list-item-menu-lf {
-	@include flex(1, 0, auto);
+	@include flex(1, 0, 0%);
 	@include flex-box;
 	@include flex-row(center, flex-start);
 	@include flex-set(stretch);
@@ -67,6 +68,7 @@
 }
 
 .cortex-block-list-item-handle {
+	@include flex(none);
 	cursor: move;
 	padding: 4px;
 }
@@ -93,17 +95,28 @@
 }
 
 .cortex-block-list-item-title {
+
+	@include flex(0, 1, auto);
 	color: #aaa;
 	font-size: 11px;
+	margin: 0px;
 	margin-left: 3px;
+	line-height: 1.25;
+
+	span {
+		display: block;
+		overflow: hidden;
+		text-overflow: ellipsis;
+	}
 }
 
 .cortex-block-list-item-menu-button {
 
+	@include flex(1, 1, auto);
 	@include flex-box;
-	@include flex-row(center, center);
+	@include flex-row(center, flex-start);
 	margin: 0px;
-	margin-left: 12px;
+	margin-left: 6px;
 
 	&.cortex-block-list-item-menu-button-show,
 	&.cortex-block-list-item-menu-button-hide {
